2009-08-28  Ross Younger  <wry@ecoscentric.com>

	* tests: Add bbt.c and multipagebbt.c (moved from io/nand).
	* doc/synth_nand.sgml: Document this device's test programs.

2009-07-31  Bart Veer  <bartv@ecoscentric.com>

	* doc/synth_nand.sgml, src/nand_synth.c: add support for per-block
	erase counts and per-page write counts to monitor wear-levelling.

2009-07-14  Bart Veer  <bartv@ecoscentric.com>

	* host/nand.tcl (dialog): avoid the use of max() for compatibility
	with ancient Tcl 8.4 installations.

	* host/configure.in: allow builds on x86_64 machines.

	* host/configure: regenerate.

	*  doc/synth_nand.sgml, doc/dialog1.png, doc/dialog2.png: add
	documentation.

2009-07-09  Bart Veer  <bartv@ecoscentric.com>

	* host/nand.tcl, host/nand.tdf, src/nand_synth.c: first attempt at
	a full-blown implementation complete with logging and error
	injection.

	* cdl/nand_synth.cdl: add dependencies on other packages. Fix name
	of CYGDAT_NAND_SYNTH_FILENAME option as per CDL coding standards.

2009-06-17  Ross Younger  <wry@eCosCentric.com>

	* Retab for consistency with other eCos sources.
	* Move eccdamage test from io/nand.

2009-03-06  Ross Younger  <wry@eCosCentric.com>

	* New package. Synthetic NAND flash chip.

//===========================================================================
// ####ECOSGPLCOPYRIGHTBEGIN####                                            
// -------------------------------------------                              
// This file is part of eCos, the Embedded Configurable Operating System.   
// Copyright (C) 2009 eCosCentric Limited.
//
// eCos is free software; you can redistribute it and/or modify it under    
// the terms of the GNU General Public License as published by the Free     
// Software Foundation; either version 2 or (at your option) any later      
// version.                                                                 
//
// eCos is distributed in the hope that it will be useful, but WITHOUT      